@@ -17,6 +17,12 @@ CHANGES WITH 260 in spe:
           rather than the first, to keep these options coherent with other
           unit settings.
 
+        Changes in other components:
+
+        * New option SYSTEMD_COLORS=auto-16, which is like SYSTEMD_COLORS=16
+          when output is to a non-dumb TTY, and like SYSTEMD_COLORS=no
+          otherwise.
+
 CHANGES WITH 259:
 
         Announcements of Future Feature Removals and Incompatible Changes:
